# orgdesk

./: CLAUDE.md  CODE_REVIEW_FINDINGS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.cursor/rules/: create-prd.mdc  cursor-rules.mdc  generate-tasks.mdc  process-tasks.mdc  tasks-from-images.mdc  tauri.mdc
build-plan/: backend.md  frontend.md  product_requirements.md  third_party_libraries.md
build-plan/tasks/: tasks-backend.md  tasks-frontend.md  tasks-main-layout.md
data/: daily.org  personal.org  project-alpha.org  work.org
src/: App.tsx  index.css  org.d.ts
src-tauri/: Cargo.toml  orgtoical_main.rs  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs
src-tauri/src/models/: mod.rs  task.rs
src-tauri/src/parser/: mod.rs  org_parser.rs
src-tauri/src/store/: mod.rs  task_store.rs
src-tauri/src/watcher/: file_watcher.rs  mod.rs
src/components/: AgendaPane.tsx  FileExplorerPane.tsx  OrgNode.tsx  TaskListPane.test.tsx  TaskListPane.tsx  Toolbar.tsx
src/components/dialogs/: AgendaBuilderDialog.tsx  RefileDialog.tsx  SettingsDialog.tsx
src/components/layout/: MainLayout.tsx
src/components/modals/: QuickCaptureModal.tsx
src/components/ui/: Dialog.tsx  Dropdown.tsx  UpdatePrompt.tsx
src/lib/: api.ts  taskTree.test.ts  taskTree.ts
src/stores/: agendaSlice.ts  index.ts  settingsSlice.ts  tasksSlice.ts  uiSlice.ts
