[package]
name = "orgdesk"
version = "0.1.0"
description = "OrgDesk - Desktop application for Org Mode task management"
authors = ["OrgDesk Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "orgdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
# OrgDesk specific dependencies
orgize = { version = "0.10.0-alpha.10", features = ["chrono", "indexmap"] }
notify = "6.1.1"
thiserror = "1.0.58"
regex = "1.10.3"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
notify-debouncer-full = "0.3.1"

[dev-dependencies]
tempfile = "3.10.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
